MISC: Fixing the double clear buttons on IE

--- a/src/app/sidebar/sidebar.scss
+++ b/src/app/sidebar/sidebar.scss
@@ -106,6 +106,10 @@ aside {
                 &:focus {
                     outline: none;
                 }
+
+                &::-ms-clear {
+                    display: none;
+                }
             }
         }
 
